fixed margin logic overflow error

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -592,8 +592,8 @@ h3 {
 
 .title-section {
   text-align: center;
-  margin-left: 5%;
-  margin-right: 5%;
+  padding-left: 5%;
+  padding-right: 5%;
 }
 
 .avatar-title-section {
